RESOLVED FIXED174806
[iOS WK2] Crash under PageOverlayController::uninstallPageOverlay when doing multiple finds
https://bugs.webkit.org/show_bug.cgi?id=174806
Summary [iOS WK2] Crash under PageOverlayController::uninstallPageOverlay when doing ...
Simon Fraser (smfr)
Reported 2017-07-24 18:12:51 PDT
[iOS WK2] Crash under PageOverlayController::uninstallPageOverlay when doing multiple finds
Attachments
Patch (2.98 KB, patch)
2017-07-24 18:16 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2017-07-24 18:16:11 PDT
Tim Horton
Comment 2 2017-07-24 18:16:30 PDT
Comment on attachment 316337 [details] Patch V. silly :(
Simon Fraser (smfr)
Comment 3 2017-07-24 18:18:22 PDT
Note You need to log in before you can comment on or make changes to this bug.