[iOS WK2] Crash under PageOverlayController::uninstallPageOverlay when doing multiple finds https://bugs.webkit.org/show_bug.cgi?id=174806 rdar://problem/33501664

Reviewed by Tim Horton.

Calling TextIndicator::createWithSelectionInFrame can trigger layout via VisibleSelection code,
which can re-enter FindController::updateFindIndicator which has by now removed m_findIndicatorOverlay
from pageOverlayController's map, but not deleted it. The second call to uninstallPageOverlay()
thus crashes at m_overlayGraphicsLayers.take(&overlay)->removeFromParent().

Fix by nulling out m_findIndicatorOverlay as soon as we uninstall it.

* WebProcess/WebPage/ios/FindControllerIOS.mm:
(WebKit::FindController::updateFindIndicator):

Canonical link: https://commits.webkit.org/191617@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219852 268f45cc-cd09-0410-ab3c-d52691b4dbfc